--- a/calc.html
+++ b/calc.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="calculator" readonly>
+    <div id="calculator" >
         <input id="display" readonly>
         <div id="keys">
             <button onclick="appendToDisplay('+')">+</button>
