--- a/calc.html
+++ b/calc.html
@@ -27,6 +27,7 @@
             <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate()">=</button>
             <button onclick="clearDisplay()"class="operator-btn">C</button>
+            <button onclick="eraseSingleInput()"class="delete-btn">del</button>
         </div>
 
 
